Refatoração do código: criada classe upload, implementado uso do Lombok, refatoração de técnicas e métodos