@@ -3,73 +3,63 @@ package br.edu.toycenter.config;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
 import org.springframework.data.mongodb.core.MongoTemplate;
 
-import br.edu.toycenter.infrastructure.entities.Administrator;
-import br.edu.toycenter.infrastructure.entities.Category;
-import br.edu.toycenter.infrastructure.entities.Client;
-import br.edu.toycenter.infrastructure.entities.Order;
-import br.edu.toycenter.infrastructure.entities.OrderItem;
-import br.edu.toycenter.infrastructure.entities.Product;
-import br.edu.toycenter.infrastructure.repositories.AdministratorRepository;
-import br.edu.toycenter.infrastructure.repositories.CategoryRepository;
-import br.edu.toycenter.infrastructure.repositories.ClientRepository;
-import br.edu.toycenter.infrastructure.repositories.OrderRepository;
-import br.edu.toycenter.infrastructure.repositories.ProductRepository;
+import br.edu.toycenter.model.entities.Administrator;
+import br.edu.toycenter.model.entities.Category;
+import br.edu.toycenter.model.entities.Client;
+import br.edu.toycenter.model.entities.Order;
+import br.edu.toycenter.model.entities.OrderItem;
+import br.edu.toycenter.model.entities.Product;
+import br.edu.toycenter.model.repositories.AdministratorRepository;
+import br.edu.toycenter.model.repositories.CategoryRepository;
+import br.edu.toycenter.model.repositories.ClientRepository;
+import br.edu.toycenter.model.repositories.OrderRepository;
+import br.edu.toycenter.model.repositories.ProductRepository;
 
 @Configuration
 @Profile("test")
+@RequiredArgsConstructor
 public class TestConfig implements CommandLineRunner {
-		
-    @Autowired
-    private MongoTemplate mongoTemplate;
-	
-	@Autowired
-	private ClientRepository clientRepository;
-	
-	@Autowired
-	private AdministratorRepository administratorRepository;
-	
-	@Autowired
-	private ProductRepository productRepository;
-	
-	@Autowired
-	private CategoryRepository categoryRepository;
-	
-	@Autowired
-	private OrderRepository orderRepository;
+    private final MongoTemplate mongoTemplate;
+	private final ClientRepository clientRepository;
+	private final AdministratorRepository administratorRepository;
+	private final ProductRepository productRepository;
+	private final CategoryRepository categoryRepository;
+	private final OrderRepository orderRepository;
 	
 	@Override
-	public void run(String... args) throws Exception {
+	public void run(String... args) {
         mongoTemplate.getDb().drop();
 		
-        Administrator ua1 = new Administrator(null, "admin", "admin@admin", "adminadmin");
+        Administrator ua1 = new Administrator(null, "admin", "admin@admin", "admin");
         
         administratorRepository.save(ua1);
 
         Client uc1 = new Client(null, "951.954.148-88", "Maria Brown", "maria@gmail.com", "11988888888", "65cc4123");
-        Client uc2 = new Client(null, "152.361.141-64", "Alex Green", "alex@gmail.com", "11977777777", "123cc456");
+        Client uc2 = new Client(null, "152.361.141-64", "Alex Green", "alex@gmail.com", "11977777777", "123456");
         Client uc3 = new Client(null, "142.141.391-51", "James Red", "james@gmail.com", "11966666666", "654cc321");
 		
 		clientRepository.saveAll(Arrays.asList(uc1, uc2, uc3));
 		
 		Product p1 = new Product(null, "Carrinho de controle remoto", "/images/product/pinguim1.webp", "Estrela", 99.90, "Carrinho de controle remoto de qualidade"
-				, "Carrinho a pilha de 40 cm" );
+				, "Carrinho a pilha de 40 cm", new ArrayList<>());
 		Product p2 = new Product(null, "Boneca da Barbie", "/images/product/pinguim1.webp", "Funtoy", 120.99, "Boneca da Barbie do seus sonhos"
-				, "Boneca de plástico de 16 cm");
+				, "Boneca de plástico de 16 cm", new ArrayList<>());
 		Product p3 = new Product(null, "PlayStation 3", "/images/product/pinguim1.webp", "Sony", 1299.80, "Console de antepenúltima geração maravilhoso"
-				, "Console com 256 GB de memória");
+				, "Console com 256 GB de memória", new ArrayList<>());
 		
 		productRepository.saveAll(Arrays.asList(p1, p2, p3));
 		
-		Category c1 = new Category(null, "Carrinhos", "/images/category/pinguim1.webp");
-		Category c2 = new Category(null, "Bonecas", "/images/category/pinguim1.webp");
-		Category c3 = new Category(null, "Consoles", "/images/category/pinguim1.webp");
+		Category c1 = new Category(null, "Carrinhos", "/images/category/pinguim1.webp", new ArrayList<>());
+		Category c2 = new Category(null, "Bonecas", "/images/category/pinguim1.webp", new ArrayList<>());
+		Category c3 = new Category(null, "Consoles", "/images/category/pinguim1.webp", new ArrayList<>());
 		
 		categoryRepository.saveAll(Arrays.asList(c1, c2, c3));
 		
@@ -89,9 +79,9 @@ public class TestConfig implements CommandLineRunner {
 		OrderItem oi2 = new OrderItem(2, p2.getPrice(), p2);
 		OrderItem oi3 = new OrderItem(3, p3.getPrice(), p3);
 		
-		Order o1 = new Order(null, Instant.parse("2019-06-20T19:53:07Z"), uc1.getId(), Arrays.asList(oi1));
-		Order o2 = new Order(null, Instant.parse("2019-07-21T03:42:10Z"), uc2.getId(), Arrays.asList(oi2));
-		Order o3 = new Order(null, Instant.parse("2019-07-22T15:21:22Z"), uc3.getId(), Arrays.asList(oi3));
+		Order o1 = new Order(null, Instant.parse("2019-06-20T19:53:07Z"), uc1.getId(), List.of(oi1));
+		Order o2 = new Order(null, Instant.parse("2019-07-21T03:42:10Z"), uc2.getId(), List.of(oi2));
+		Order o3 = new Order(null, Instant.parse("2019-07-22T15:21:22Z"), uc3.getId(), List.of(oi3));
 	
 		orderRepository.saveAll(Arrays.asList(o1, o2, o3));
 		
